--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shawn-cv",
+  "name": "CV-website",
   "version": "1.0.0",
   "description": "Shawn's portfolio website",
   "author": "shawn3298317 <shawn3298317lin@gmail.com>",
