--- a/static/projects/project_infos.json
+++ b/static/projects/project_infos.json
@@ -108,6 +108,7 @@
 	"99": {
 		"projectGroup": "Robotics/CV",
 		"projectName": "D-SPUR",
+		"thumbNail": "thumbnail-DSPUR.png",
 		"intro": "Here are 2 sentences of introduction for this project. This is the first sentence, blah blah blah. And this is the second sentence. Yeah!",
 		"info": {
 			"pics": [
